# image_to_webp

./: LICENSE  README.md  image_to_webp.py  pyproject.toml
